yaml/metal-lb-v0.9.5/palette3-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: orange
  name: palette3-nginx-ingress
  labels:
    app: palette3-nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: palette3-nginx-ingress
  template:
    metadata:
      labels:
        app: palette3-nginx-ingress
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: orange
  name: palette3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - palette3.orange.com
      secretName: palette3-tlssecret
  rules:
    - host: palette3.orange.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-ui
                port:
                  number: 8443
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-api
                port:
                  number: 8443
          - path: /auth-api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-auth
                port:
                  number: 8443
          - path: /chat-api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-chat
                port:
                  number: 8443
          - path: /phone-api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-phone
                port:
                  number: 8443
